# SkiFree

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
source/: actor.cpp  actor.h  bounding_box.cpp  bounding_box.h  globals.cpp  globals.h  obstacles.h  vector2d.cpp  vector2d.h
source/textures/: monster.cpp  monster_textures.cpp  obstacles_textures.cpp  player_textures.cpp  textures.h
